# PolyU_COMP_Subjects

./: .gitignore  .gitignore.txt  .gitmodules  LICENSE  README.md
comp4433 (dsai4204)/projects/group_proj (hpp)/codebase/: README.md  pyproject.toml  run.py
comp4433 (dsai4204)/projects/group_proj (hpp)/codebase/plots/: pareto.ipynb  shap.ipynb  stacking.ipynb
comp4433 (dsai4204)/projects/group_proj (hpp)/codebase/src/hpp/: config.yaml  feature.py  grid.py  kaggle.py  main.py  modeling.py  utils.py
comp4433 (dsai4204)/projects/individual_proj (haa)/codebase/: .gitignore  .gitmodules  README.md  data_inspection_report.txt  main.py  pyproject.toml
comp4433 (dsai4204)/projects/individual_proj (haa)/codebase/data/: heart.csv  proba.csv
comp4433 (dsai4204)/projects/individual_proj (haa)/codebase/report/: 4204.bib  main.typ
comp4433 (dsai4204)/projects/individual_proj (haa)/codebase/scripts/: fix_heart_raw.py
comp4433 (dsai4204)/projects/individual_proj (haa)/codebase/src/: config.py  config.yaml  stability.py  statistics.py  utils.py
comp4433 (dsai4204)/projects/individual_proj (haa)/codebase/src/classify/: limix.py  preprocess.py  report.py  run.py
comp4433 (dsai4204)/projects/individual_proj (haa)/codebase/src/cluster/: __init__.py  (+5 more)
comp4433 (dsai4204)/projects/individual_proj (haa)/codebase/tests/: search_dbscan.py  search_hdbscan.py  search_optics.py  test_proba.py
comp4436/project/codebase/: README.md  config.py  main.py  pyproject.toml
comp4436/project/codebase/core/: cloud.py  compat.py  console.py  edge.py  events.py  network.py  pipeline.py  queue.py  simulator.py  types.py
comp4436/project/codebase/evaluation/: analysis.py  metrics.py  typst_table.py
comp4436/project/codebase/experiments/: _admissions.py  _dispatchers.py  admission.py  dispatch.py  runner.py
comp4436/project/codebase/models/: compression.py  lenet.py  profiler.py  resnet.py  runners.py
comp4436/project/codebase/output/admission/: results_table.typ
comp4436/project/codebase/output/admission_resnet_real/: results_table.typ
comp4436/project/codebase/output/dispatch/: results_table.typ
comp4436/project/codebase/output/dispatch_resnet_real/: results_table.typ
comp4436/project/codebase/report/: main.typ
comp4436/project/codebase/strategies/: admission.py  arrival.py  dispatch.py  protocols.py
comp4436/project/codebase/tests/: conftest.py  test_analysis.py  test_arrival.py  test_cloud.py  test_dispatch.py  test_edge.py  test_metrics.py  test_model_profiling.py  test_pipeline.py  test_profile_cache.py  test_queue.py  test_simulator.py
(+198 files in other folders)
